--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -148,6 +148,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="pozadina.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -176,6 +177,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Registracija\Registracija.cshtml" />
+    <Content Include="Views\Registracija\Prijava.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
