--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -181,6 +181,8 @@
     <Content Include="Views\Registracija\Prijava.cshtml" />
     <Content Include="Views\Vozilo\Index.cshtml" />
     <Content Include="Views\Registracija\Kupci.cshtml" />
+    <Content Include="Views\Vozilo\DodajNovoVozilo.cshtml" />
+    <Content Include="Views\Vozilo\ProfilVozila.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
