feature/change-car-data

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -183,6 +183,7 @@
     <Content Include="Views\Registracija\Kupci.cshtml" />
     <Content Include="Views\Vozilo\DodajNovoVozilo.cshtml" />
     <Content Include="Views\Vozilo\ProfilVozila.cshtml" />
+    <Content Include="Views\Vozilo\IzmeniVozilo.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
