feature/register-owner

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -184,6 +184,7 @@
     <Content Include="Views\Vozilo\DodajNovoVozilo.cshtml" />
     <Content Include="Views\Vozilo\ProfilVozila.cshtml" />
     <Content Include="Views\Vozilo\IzmeniVozilo.cshtml" />
+    <Content Include="Views\Registracija\RegistracijaVlasnika.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
