feature/user-profile

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -185,6 +185,8 @@
     <Content Include="Views\Vozilo\ProfilVozila.cshtml" />
     <Content Include="Views\Vozilo\IzmeniVozilo.cshtml" />
     <Content Include="Views\Registracija\RegistracijaVlasnika.cshtml" />
+    <Content Include="Views\Registracija\ProfilKorisnika.cshtml" />
+    <Content Include="Views\Registracija\IzmeniProfilKorisnika.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
