--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -141,6 +141,8 @@
   <ItemGroup>
     <Content Include="App_Data\korisnici.txt" />
     <Content Include="App_Data\vozila.txt" />
+    <Content Include="avatar.jpg" />
+    <Content Include="avatar.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
