feature/new-changes2

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -151,6 +151,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\avatar2.png" />
     <Content Include="Images\pozadina.jpg" />
     <Content Include="Images\pozadinalogin.jpg" />
     <Content Include="Scripts\bootstrap.js" />
