feature/design-changes2

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016.csproj
@@ -159,8 +159,18 @@
     <Content Include="Images\car3.jpg" />
     <Content Include="Images\car4.jpg" />
     <Content Include="Images\car5.png" />
+    <Content Include="Images\caricon1.png" />
+    <Content Include="Images\caricon1a.png" />
+    <Content Include="Images\caricon2.png" />
+    <Content Include="Images\caricon2a.png" />
+    <Content Include="Images\caricon3.jpg" />
+    <Content Include="Images\caricon3a.png" />
     <Content Include="Images\cars.jpg" />
     <Content Include="Images\cars1.jpg" />
+    <Content Include="Images\filter.png" />
+    <Content Include="Images\filter1.jpg" />
+    <Content Include="Images\filter1.png" />
+    <Content Include="Images\filter4.png" />
     <Content Include="Images\kljucevi.png" />
     <Content Include="Images\pozadina.jpg" />
     <Content Include="Images\pozadina10.jpg" />
@@ -187,9 +197,21 @@
     <Content Include="Images\pozadina9.jpg" />
     <Content Include="Images\pozadinalogin.jpg" />
     <Content Include="Images\pozadinalogin1.jpg" />
+    <Content Include="Images\sarch3.png" />
+    <Content Include="Images\search.png" />
+    <Content Include="Images\search1.png" />
+    <Content Include="Images\sort1.png" />
+    <Content Include="Images\sort2.jpg" />
+    <Content Include="Images\sort4.jpg" />
+    <Content Include="Images\sort5.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Images\pozadina11.webp" />
+    <Content Include="Images\sort1.webp" />
+    <Content Include="Images\filter3.webp" />
+    <Content Include="Images\filter4.webp" />
+    <Content Include="Images\sort3.webp" />
+    <Content Include="Images\sort6.webp" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
